Time Format Change, Additional Baby/History Data, History Limits with Auto deletion, API not updated
